fix(content): double border/padding in code blocks by browserslist

--- a/src/_content.less
+++ b/src/_content.less
@@ -120,7 +120,7 @@
       box-decoration-break: clone;
     }
     pre code {
-      padding: 0;
+      padding: 0 !important;
       border: none;
       background-color: transparent;
       font-size: 1em;
